[gd_scene load_steps=17 format=3 uid="uid://cdg1m6gv7tmit"]

[ext_resource type="Theme" uid="uid://2os1x4i4c3g5" path="res://Themes/Rainworld_SquareButtonTheme.tres" id="1_dbvki"]
[ext_resource type="FontFile" uid="uid://sh4btkwdrjd3" path="res://Fonts/KGNexttoMeSolid.ttf" id="2_tatf1"]
[ext_resource type="Script" path="res://Scripts/UI/ExitButton.gd" id="3_cieam"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Void.gd" id="4_ybvu1"]
[ext_resource type="StyleBox" uid="uid://dp73x7trpbyyu" path="res://StyleBoxes/EmptyOutline_StyleBox.tres" id="5_b8ura"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Nukespawner.gd" id="6_mxiyu"]
[ext_resource type="PackedScene" uid="uid://cjyo8w1fk21e7" path="res://Scenes/In Game Stuff/nuke_scene.tscn" id="7_ekyes"]
[ext_resource type="PackedScene" uid="uid://bghs6em6eqof8" path="res://Scenes/In Game Stuff/Sweeper.tscn" id="8_ivnos"]
[ext_resource type="PackedScene" path="res://Scenes/In Game Stuff/Platform.tscn" id="9_lt75u"]
[ext_resource type="AudioStream" uid="uid://gap6g2yu8kx3" path="res://Sounds/25. Universal Collapse.mp3" id="10_2scp3"]
[ext_resource type="Script" path="res://Scripts/UI/Mouse.gd" id="11_qk3en"]
[ext_resource type="Texture2D" uid="uid://dypdda6irmva" path="res://Sprites/Backgrounds/sky1.png" id="12_40kga"]

[sub_resource type="LabelSettings" id="LabelSettings_8b1ob"]
font = ExtResource("2_tatf1")
font_size = 36
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3oj3v"]
size = Vector2(417, 647)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t31xx"]
size = Vector2(12446, 154)

[sub_resource type="CircleShape2D" id="CircleShape2D_5cryv"]

[node name="Title Screen" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -324.0
offset_right = 578.0
offset_bottom = 323.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="EndCredits" type="Button" parent="Buttons"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0128335
anchor_top = 0.906028
anchor_right = 0.0949089
anchor_bottom = 0.983028
offset_left = 354.203
offset_top = -582.2
offset_right = 354.57
offset_bottom = -582.019
pivot_offset = Vector2(334, -310)
theme = ExtResource("1_dbvki")
theme_override_fonts/font = ExtResource("2_tatf1")
action_mode = 0
text = "Back"
script = ExtResource("3_cieam")

[node name="Youtube" type="Button" parent="Buttons"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0128335
anchor_top = 0.906028
anchor_right = 0.0949089
anchor_bottom = 0.983028
offset_left = 450.203
offset_top = -582.2
offset_right = 485.57
offset_bottom = -582.019
pivot_offset = Vector2(334, -310)
theme = ExtResource("1_dbvki")
theme_override_fonts/font = ExtResource("2_tatf1")
action_mode = 0
text = "My YT"

[node name="Itch" type="Button" parent="Buttons"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0128335
anchor_top = 0.906028
anchor_right = 0.0949089
anchor_bottom = 0.983028
offset_left = 581.203
offset_top = -582.2
offset_right = 669.57
offset_bottom = -582.019
pivot_offset = Vector2(334, -310)
theme = ExtResource("1_dbvki")
theme_override_fonts/font = ExtResource("2_tatf1")
action_mode = 0
text = "My Itch.io"

[node name="3" type="Node2D" parent="Buttons"]

[node name="4" type="Node2D" parent="Buttons"]

[node name="5" type="Node2D" parent="Buttons"]

[node name="6" type="Node2D" parent="Buttons"]

[node name="7" type="Node2D" parent="Buttons"]

[node name="Panel" type="Panel" parent="Buttons"]
z_index = -5
y_sort_enabled = true
layout_mode = 0
offset_left = 365.0
offset_right = 782.0
offset_bottom = 647.0
mouse_filter = 2
theme = ExtResource("1_dbvki")

[node name="Container" type="Container" parent="Buttons/Panel"]
clip_contents = true
layout_mode = 0
offset_left = 2.0
offset_top = 54.0
offset_right = 415.0
offset_bottom = 645.0
mouse_filter = 2

[node name="Credits" type="Label" parent="Buttons/Panel/Container"]
z_index = 5
y_sort_enabled = true
custom_minimum_size = Vector2(415, 109)
layout_mode = 2
theme = ExtResource("1_dbvki")
theme_override_styles/normal = ExtResource("5_b8ura")
text = "Nuclear Avoidance"
label_settings = SubResource("LabelSettings_8b1ob")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="Buttons/Panel/Container/Credits"]
z_index = 5
layout_mode = 0
offset_left = -1.0
offset_top = 131.0
offset_right = 552.0
offset_bottom = 3992.0
scale = Vector2(0.75, 0.75)
theme = ExtResource("1_dbvki")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = ExtResource("5_b8ura")
text = "

Original Idea by: 2020 Hunter



Coding by: Huntress



Sprites by: Huntress



Backgrounds by: Charlie (Chortle)



Play Testers: Huntress, Charlie (Chortle), Sylvia, James, Will, Jamie & Nathaneal.



Special Thanks to:


My past self for this idea.

Me!

James for always finding bugs.


Charlie for the amazing backgrounds!


My Family for being supportive and showing intrest in my passion.


All the Play testers for enjoying the game and giving me ideas.


All my freinds & family for helping shape me into who I am today.



And a special thanks to you, the player(s) for playing and (hopefully) enjoying my game! <3"
label_settings = SubResource("LabelSettings_8b1ob")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="Buttons/Panel"]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_ybvu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Panel/Area2D"]
position = Vector2(208.5, 323.5)
shape = SubResource("RectangleShape2D_3oj3v")
metadata/_edit_lock_ = true

[node name="Nuke Stuff" type="Node" parent="."]

[node name="Nuke Spawner" type="Node2D" parent="Nuke Stuff"]
script = ExtResource("6_mxiyu")
nuke_scene = ExtResource("7_ekyes")
sweeper_scene = ExtResource("8_ivnos")

[node name="Timer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
autostart = true

[node name="Timer2" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
autostart = true

[node name="Timer3" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
autostart = true

[node name="Timer4" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 1e+09
autostart = true

[node name="Swimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 18.33
one_shot = true

[node name="SwimerTimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
one_shot = true
autostart = true

[node name="void" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_ybvu1")
GroundLeft = ExtResource("9_lt75u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2(-6, 574)
shape = SubResource("RectangleShape2D_t31xx")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("10_2scp3")

[node name="ColorRect" type="ColorRect" parent="void"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(203, 7)
script = ExtResource("11_qk3en")

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_5cryv")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sky1" type="Sprite2D" parent="."]
z_index = -20
position = Vector2(-12, 13)
scale = Vector2(0.613281, 0.613281)
texture = ExtResource("12_40kga")
metadata/_edit_lock_ = true

[connection signal="pressed" from="Buttons/EndCredits" to="Buttons/EndCredits" method="_on_pressed"]
[connection signal="pressed" from="Buttons/Youtube" to="Buttons/EndCredits" method="_on_youtube_pressed"]
[connection signal="pressed" from="Buttons/Itch" to="Buttons/EndCredits" method="_on_itch_pressed"]
[connection signal="area_entered" from="Buttons/Panel/Area2D" to="Buttons/Panel/Area2D" method="_on_area_entered"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer" to="Nuke Stuff/Nuke Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer2" to="Nuke Stuff/Nuke Spawner" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer3" to="Nuke Stuff/Nuke Spawner" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer4" to="Nuke Stuff/Nuke Spawner" method="_on_timer_4_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Swimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/SwimerTimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timer_timeout"]
[connection signal="area_entered" from="void" to="void" method="_on_area_entered"]
[connection signal="body_entered" from="void" to="void" method="_on_body_entered"]
[connection signal="timeout" from="void/TextTimer" to="void" method="_on_text_timer_timeout"]
