[gd_scene load_steps=19 format=3 uid="uid://ba82sjsmja2py"]

[ext_resource type="Theme" uid="uid://2os1x4i4c3g5" path="res://Themes/Rainworld_SquareButtonTheme.tres" id="1_vawcd"]
[ext_resource type="FontFile" uid="uid://sh4btkwdrjd3" path="res://Fonts/KGNexttoMeSolid.ttf" id="2_85nv8"]
[ext_resource type="Script" path="res://Scripts/UI/ExitButton.gd" id="3_sdn4f"]
[ext_resource type="Texture2D" uid="uid://dds6wfvmf0dq0" path="res://Sprites/UI/dot.png" id="4_2h0s7"]
[ext_resource type="Script" path="res://Scripts/UI/TutorialScript.gd" id="4_hh0ig"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Void.gd" id="5_330qo"]
[ext_resource type="Texture2D" uid="uid://8fmgwgi3h1gi" path="res://Sprites/UI/greydot.png" id="5_oaoje"]
[ext_resource type="Script" path="res://Scripts/Gameplay/Nukespawner.gd" id="6_bkn4s"]
[ext_resource type="FontFile" uid="uid://dtxdl4fp2pyrn" path="res://Fonts/Arrows ADF.ttf" id="7_4eano"]
[ext_resource type="PackedScene" uid="uid://cjyo8w1fk21e7" path="res://Scenes/In Game Stuff/nuke_scene.tscn" id="7_jtwb8"]
[ext_resource type="PackedScene" uid="uid://bghs6em6eqof8" path="res://Scenes/In Game Stuff/Sweeper.tscn" id="8_npqhx"]
[ext_resource type="PackedScene" path="res://Scenes/In Game Stuff/Platform.tscn" id="9_makr3"]
[ext_resource type="AudioStream" uid="uid://gap6g2yu8kx3" path="res://Sounds/25. Universal Collapse.mp3" id="10_gndqb"]
[ext_resource type="Script" path="res://Scripts/UI/Mouse.gd" id="11_4xfra"]
[ext_resource type="Texture2D" uid="uid://dypdda6irmva" path="res://Sprites/Backgrounds/sky1.png" id="12_75huy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3oj3v"]
size = Vector2(417, 501)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t31xx"]
size = Vector2(12446, 154)

[sub_resource type="CircleShape2D" id="CircleShape2D_5cryv"]

[node name="Title Screen" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -324.0
offset_right = 578.0
offset_bottom = 323.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="EndTutorial" type="Button" parent="Buttons"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0128335
anchor_top = 0.906028
anchor_right = 0.0949089
anchor_bottom = 0.983028
offset_left = 361.203
offset_top = -503.2
offset_right = 361.57
offset_bottom = -503.019
pivot_offset = Vector2(334, -310)
theme = ExtResource("1_vawcd")
theme_override_fonts/font = ExtResource("2_85nv8")
action_mode = 0
text = "Back"
script = ExtResource("3_sdn4f")

[node name="DotPanel" type="Panel" parent="Buttons"]
layout_mode = 0
offset_left = 488.0
offset_top = 422.0
offset_right = 663.0
offset_bottom = 457.0
theme = ExtResource("1_vawcd")
script = ExtResource("4_hh0ig")

[node name="Button" type="TextureButton" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 31.667
offset_bottom = 26.667
toggle_mode = true
texture_normal = ExtResource("4_2h0s7")
texture_pressed = ExtResource("5_oaoje")
ignore_texture_size = true
stretch_mode = 0

[node name="Button2" type="TextureButton" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 39.0
offset_top = 8.0
offset_right = 57.667
offset_bottom = 26.667
toggle_mode = true
texture_normal = ExtResource("4_2h0s7")
texture_pressed = ExtResource("5_oaoje")
ignore_texture_size = true
stretch_mode = 0

[node name="Button3" type="TextureButton" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 65.0
offset_top = 8.0
offset_right = 83.667
offset_bottom = 26.667
toggle_mode = true
texture_normal = ExtResource("4_2h0s7")
texture_pressed = ExtResource("5_oaoje")
ignore_texture_size = true
stretch_mode = 0

[node name="Button4" type="TextureButton" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 91.0
offset_top = 8.0
offset_right = 109.667
offset_bottom = 26.667
toggle_mode = true
texture_normal = ExtResource("4_2h0s7")
texture_pressed = ExtResource("5_oaoje")
ignore_texture_size = true
stretch_mode = 0

[node name="Button5" type="TextureButton" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 117.0
offset_top = 8.0
offset_right = 135.667
offset_bottom = 26.667
toggle_mode = true
texture_normal = ExtResource("4_2h0s7")
texture_pressed = ExtResource("5_oaoje")
ignore_texture_size = true
stretch_mode = 0

[node name="Button6" type="TextureButton" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 143.0
offset_top = 8.0
offset_right = 161.667
offset_bottom = 26.667
toggle_mode = true
texture_normal = ExtResource("4_2h0s7")
texture_pressed = ExtResource("5_oaoje")
ignore_texture_size = true
stretch_mode = 0

[node name="Left" type="Button" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = -50.0
offset_right = 25.0
offset_bottom = 69.0
scale = Vector2(0.508, 0.508)
theme_override_fonts/font = ExtResource("7_4eano")
theme_override_font_sizes/font_size = 64
text = "o"

[node name="Right" type="Button" parent="Buttons/DotPanel"]
layout_mode = 0
offset_left = 188.0
offset_right = 263.0
offset_bottom = 69.0
scale = Vector2(0.508, 0.508)
theme_override_fonts/font = ExtResource("7_4eano")
theme_override_font_sizes/font_size = 64
text = "k"

[node name="2" type="Node2D" parent="Buttons"]

[node name="3" type="Node2D" parent="Buttons"]

[node name="4" type="Node2D" parent="Buttons"]

[node name="5" type="Node2D" parent="Buttons"]

[node name="6" type="Node2D" parent="Buttons"]

[node name="7" type="Node2D" parent="Buttons"]

[node name="Panel" type="Panel" parent="Buttons"]
z_index = -5
y_sort_enabled = true
layout_mode = 0
offset_left = 370.0
offset_top = 146.0
offset_right = 787.0
offset_bottom = 501.0
mouse_filter = 2
theme = ExtResource("1_vawcd")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="Buttons/Panel"]
visible = false
collision_layer = 2
collision_mask = 2
script = ExtResource("5_330qo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Panel/Area2D"]
position = Vector2(208.5, 250.5)
shape = SubResource("RectangleShape2D_3oj3v")
metadata/_edit_lock_ = true

[node name="Nuke Stuff" type="Node" parent="."]

[node name="Nuke Spawner" type="Node2D" parent="Nuke Stuff"]
script = ExtResource("6_bkn4s")
nuke_scene = ExtResource("7_jtwb8")
sweeper_scene = ExtResource("8_npqhx")

[node name="Timer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
autostart = true

[node name="Timer2" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
autostart = true

[node name="Timer3" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
autostart = true

[node name="Timer4" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 1e+09
autostart = true

[node name="Swimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
wait_time = 18.33
one_shot = true

[node name="SwimerTimer" type="Timer" parent="Nuke Stuff/Nuke Spawner"]
one_shot = true
autostart = true

[node name="void" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("5_330qo")
GroundLeft = ExtResource("9_makr3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
position = Vector2(-6, 574)
shape = SubResource("RectangleShape2D_t31xx")

[node name="UniCollapse" type="AudioStreamPlayer2D" parent="void"]
stream = ExtResource("10_gndqb")

[node name="ColorRect" type="ColorRect" parent="void"]
visible = false
z_index = 1
offset_left = -584.0
offset_top = -651.0
offset_right = 575.0
offset_bottom = 21.0
color = Color(0.713726, 0, 0.74902, 0.156863)

[node name="RichTextLabel" type="RichTextLabel" parent="void"]
visible = false
z_index = 3
offset_left = -560.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 17.0
theme_override_colors/default_color = Color(0, 0.760784, 1, 1)
theme_override_font_sizes/normal_font_size = 18
text = "You are no god... but I shall feast upon your essence regardless!"

[node name="TextTimer" type="Timer" parent="void"]
wait_time = 3.0
one_shot = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(203, 7)
script = ExtResource("11_4xfra")

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_5cryv")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Sky1" type="Sprite2D" parent="."]
z_index = -20
position = Vector2(-12, 13)
scale = Vector2(0.613281, 0.613281)
texture = ExtResource("12_75huy")
metadata/_edit_lock_ = true

[connection signal="pressed" from="Buttons/EndTutorial" to="Buttons/EndTutorial" method="_on_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Button" to="Buttons/DotPanel" method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Button2" to="Buttons/DotPanel" method="_on_button_2_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Button3" to="Buttons/DotPanel" method="_on_button_3_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Button4" to="Buttons/DotPanel" method="_on_button_4_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Button5" to="Buttons/DotPanel" method="_on_button_5_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Button6" to="Buttons/DotPanel" method="_on_button_6_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Left" to="Buttons/DotPanel" method="_on_left_pressed"]
[connection signal="pressed" from="Buttons/DotPanel/Right" to="Buttons/DotPanel" method="_on_right_pressed"]
[connection signal="area_entered" from="Buttons/Panel/Area2D" to="Buttons/Panel/Area2D" method="_on_area_entered"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer" to="Nuke Stuff/Nuke Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer2" to="Nuke Stuff/Nuke Spawner" method="_on_timer_2_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer3" to="Nuke Stuff/Nuke Spawner" method="_on_timer_3_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Timer4" to="Nuke Stuff/Nuke Spawner" method="_on_timer_4_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/Swimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timeout"]
[connection signal="timeout" from="Nuke Stuff/Nuke Spawner/SwimerTimer" to="Nuke Stuff/Nuke Spawner" method="_on_swimer_timer_timeout"]
[connection signal="area_entered" from="void" to="void" method="_on_area_entered"]
[connection signal="body_entered" from="void" to="void" method="_on_body_entered"]
[connection signal="timeout" from="void/TextTimer" to="void" method="_on_text_timer_timeout"]
