[gd_scene load_steps=4 format=3 uid="uid://4w1gncy6lgoo"]

[ext_resource type="Script" path="res://Scripts/UI/PlayButton.gd" id="1_nig56"]
[ext_resource type="Texture2D" uid="uid://cjmvkra7ok58k" path="res://Sprites/Red X.png" id="2_5fyfu"]
[ext_resource type="Script" path="res://Scripts/UI/ExitButton.gd" id="3_unan6"]

[node name="Title Screen" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -575.0
offset_top = -324.0
offset_right = 578.0
offset_bottom = 323.0
metadata/_edit_use_anchors_ = true

[node name="Play Button" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 422.0
offset_top = 281.0
offset_right = 726.0
offset_bottom = 376.0
action_mode = 0
text = "Play Game"
script = ExtResource("1_nig56")
metadata/_edit_use_anchors_ = true

[node name="Exit Button" type="Button" parent="Buttons"]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
light_mask = 0
layout_mode = 0
offset_left = 1033.0
offset_top = 26.0
offset_right = 1123.0
offset_bottom = 109.0
tooltip_text = "Quit Game."
icon = ExtResource("2_5fyfu")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("3_unan6")
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.430031
anchor_top = 0.671887
anchor_right = 0.570127
anchor_bottom = 0.745435
offset_left = 0.17395
offset_top = 0.28894
offset_right = -0.356079
offset_bottom = -0.296997
action_mode = 0
text = "Settings"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/Play Button" to="Buttons/Play Button" method="_on_pressed"]
[connection signal="pressed" from="Buttons/Exit Button" to="Buttons/Exit Button" method="_on_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="Buttons/Exit Button" method="_on_settings_pressed"]
